--- a/3.html
+++ b/3.html
@@ -1,83 +1,47 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
-
     <title>Страница 2</title>
-
 </head>
-
 <body>
-
+    <ul type="square">
+        <li><a href="1.html">Страница 1</a> </li>
+        <li><a href="2.html">Страница 2</a></li>
+        <li><a href="autorization.html">Авторизация</a></li>
+        <li><a href="regestration.html">Регистрация</a></li>
+    </ul>
 <h1 align="center">Аргени?да</h1>
-
 <h2 align="right"> аллегорический роман шотландскогопоэта Джона Беркли</h2>
-
 <h3 align="left">написанный на латинском языке. </h3>
-
 <h4> Работа над текстом шла с 1617 года в Риме,.</h4>
-
 <h5> первое ле кончины автора в 1621 году </h5>
-
 <h6>  в эпоху барокко жанру «романа с ключом», породило многочисленные продолжения и подражания </h6>
-
 <p> Произведение относится к популярному в эпоху барокко жанру «романа с ключом», породило многочисленные продолжения и подражания и сильно повлияло на развитие французской прециозной литературы (включая романы мадам де Скюдери и «Приключения Телемака» Фенелона). Аллегорико-политические романы на латинском языке публиковались после этого до середины XVIII века.  </p>
-
 <blockquote>
-
    В латинском оригинале роман выдержал более 50 изданий и регулярно переиздавался вплоть до конца XVIII века, был переведён практически на все европейские языки, включая польский (Вацлав Потоцкий, 1697) и русский (Василий Тредиаковский, 1751). Роман ценили Гуго Гроций, кардинал Ришельё, Готфрид Лейбниц, Иоганн Гёте и Сэмюэл Кольридж. Затем «Аргенида» была на долгое время забыта, научный интерес к тексту проявился в конце XIX века, на рубеже XX—XXI веков было выпущено несколько факсимильных изданий. Научное издание латинского текста с параллельным английским переводом под редакцией Марка Райли и Дороти  Замыслив изложить её апологию, он написал аллегорический роман, который
-
 </blockquote>
-
 <q> Райли и Дороти Притчард Хьюбер </q>
-
 <ul type=" square ">
-
     <li> нце XIX века, на р а</li>
-
     <li> кого текста с параллельным английским переводом под редакцией Марка Ра </li>
-
     <li> кого текста с параллельным английским переводом под редакцией Марка Ра </li>
-
 </ul>
-
 <ol type="А" reversed start="3">
-
     <li> Научное издани </li>
-
     <li> Научное издани </li>
-
     <li> Научное издани </li>
-
 </ol>
-
     <p>
-
 ритчард Хьюбер последовало в 2004 году.
-
 Барочный роман имел сложный сюжет, основная фабула которого, хотя и помещённая в Античность, была основана на событиях реальной истории Франции XVI века — борьбе короля, гуген
-
 <strong> е издание латинского текста с параллельным английским переводом под редакцией Марка Райли и Дороти Притча </strong>
-
 <em> XVIII века, был перев </em>
-
 <br>
-
 <img src="img/1.jpg"
-
      alt="альтернативный текст"
-
      height="100"
-
      width="110">
-
-<a href="1.html">Страница 1</a>
-<a href="2.html">Страница 2</a>
 <br>
-
 </body>
-
 </html>
