--- a/regestration.html
+++ b/regestration.html
@@ -5,6 +5,12 @@
     <title>Регистрация</title>
 </head>
 <body>
+    <ul type="square">
+        <li><a href="1.html">Страница 1</a> </li>
+        <li><a href="2.html">Страница 2</a></li>
+        <li><a href="3.html">Страница 3</a></li>
+        <li><a href="autorization.html">Авторизация</a></li>
+    </ul>
     <form action="#" method="post" enctype="multipart/form-data">
     <fieldset>
          <legend>Регистрация</legend>
