--- a/forms.html
+++ b/forms.html
@@ -5,22 +5,62 @@
     <title>Форма регистрации водителя</title>
 </head>
 <body>
+<fieldset>
+    <legend>Регистрация водителя</legend>
+        <p>
+             <label for="number">Номер телефона +7</label>
+             <input id="number" type="number" placeholder="9876543210" minlength="10" maxlength="10" required>
+        </p>
+        <p>
+            <label for="avtoclass">Класс автомобиля</label>
+            <select id="avtoclass" size="3">
+                <option value="1">Седан</option>
+                <option value="2">Хэтчбек</option>
+                <option value="3">Внедорожник</option>
+                <option value="4">Кроссовер</option>
+                <option value="5">Минивэн</option>
+                <option value="6">Микроавтобус</option>
+                <option value="7">Универсал</option>
+                <option value="8">Фургон</option>
+                <option value="9">Купе</option>
+                <option value="10">Кабриолет</option>
+                <option value="11">Родстер</option>
+                <option value="12">Тарга</option>
+                <option value="13">Пикап</option>
+                <option value="14">Лимузин</option>
+                <option value="15">Стретч</option>
+                <option value="16">Лимузин</option>
+                <option value="17">Мотоцикл</option>
+                <option value="18">Мопед</option>
+                <option value="19">Электромобиль</option>
+            </select>
+        </p>
+        <p>
+            <label for="licenseclass">Категории прав</label>
+            <select id="licenseclass" size="3" multiple>
+                <option value="1">A</option>
+                <option value="2">B</option>
+                <option value="3">C</option>
+                <option value="4">D</option>
+            </select>
+        </p>
+<fieldset>
+класс прав
+срок действия прав
 права - категория
 машина категория
 мест в машине
+марка
+модель
 место для ребёнка
 запрет на разговор
 музыка?-радто аукс юсб
 предпочтение в рассадке
 курение в машине
-запрет на алкогольное опьянение
 религиозная атрибутика
 только своя машина?
 оформлена машина на?
-осаго
-каско
-марка
-модель
+
 год выпуска
 вин?
 номер
