--- a/forms.html
+++ b/forms.html
@@ -43,7 +43,7 @@
             </select>
         </p>
 
-<!--мультипл меняет список,с раскрывающегося, как выбрать несколько эл-тов без контрола чекбоксом? зачем ставить нейм, надпись между >< не будет функциональной вообще, что можно ввести вместо неё--!>
+<!--мультипл меняет список,с раскрывающегося, как выбрать несколько эл-тов без контрола чекбоксом? зачем ставить нейм, надпись между >< не будет функциональной вообще, что можно ввести вместо неё-->
 
         <p>
             <label for="licenseclass">Категории прав</label>
@@ -61,7 +61,7 @@
         <label>Детское кресло<input type="checkbox"></label>
         </p>
 
-<!--как можно поставить относительную дату? как изменить на дд/мм/гггг--!>
+<!--как можно поставить относительную дату? как изменить на дд/мм/гггг-->
 
         <p>
             <label for="licensedate">Дата истечения срока действия прав</label>
@@ -72,8 +72,8 @@
              <input id="caryear" type="number" placeholder="1990" minlength="2" maxlength="4" required>
         </p>
 
-<!--как лучше сделать выпадающий список, или ответ текстовым полем--!>
-<!--где ставить min, где minlength?--!>
+<!--как лучше сделать выпадающий список, или ответ текстовым полем-->
+<!--где ставить min, где minlength?-->
          <p>
              <label for="car">Марка автомобиля</label>
              <input id="car" type="text" minlength="3" maxlength="13">
@@ -81,19 +81,19 @@
 
 <fieldset>
 
-модель
-место для ребёнка
+
 запрет на разговор
-музыка?-радто аукс юсб
+музыка музыка в машине?-радио aux usb bluetooth кассеты диск mp3 диск wav
 предпочтение в рассадке
 курение в машине
 религиозная атрибутика
 вид деятельности
 вин?
-номер
+государственный номер 
 цвет
-комментарий
 знаком с европротоколом - вывод на статью с инструкцией.
+комментарий
+
 разрешение на обработку персональных данных
 отправку спама
 </body>
