--- a/regestration.html
+++ b/regestration.html
@@ -30,7 +30,7 @@
              <label for="password-r">Повторите пароль</label>
              <input id="password-r" type="password" placeholder="повторите пароль" minlength="2" maxlength="9" required>
          </p>
-<!--выбираются не только картинки?перепроверить--!>
+<!--выбираются не только картинки?перепроверить-->
          <p>
              <label for="file">Загрузить аватар</label>
              <input id="file" type="file" accept="image/*">
