--- a/forms.html
+++ b/forms.html
@@ -52,6 +52,7 @@
                 <option value="2">B</option>
                 <option value="3">C</option>
                 <option value="4">D</option>
+                <option value="5">E</option>
             </select>
         <p>
             <label for="numberofseats">Число пассажирских мест</label>
@@ -78,23 +79,45 @@
              <label for="car">Марка автомобиля</label>
              <input id="car" type="text" minlength="3" maxlength="13">
          </p>
-
+         <p>
+         <label>Запрет на разговор с водителем во время движения<input type="checkbox"></label>
+         </p>
+         <p>
+             <label for="carmusic">Музыка в машине</label>
+             <select name="select" id="carmusic" size="2" multiple>
+                 <option value="1">Радио</option>
+                 <option value="2">AUX</option>
+                 <option value="3">USB</option>
+                 <option value="4">Bluetooth</option>
+                 <option value="5">Диск MP3</option>
+                 <option value="6">Диск Wav</option>
+                 <option value="7">Кассетный магнитофон</option>
+                 <option value="8">Нет</option>
+             </select>
+         </p>
+         <p>
+             <label for="smoking">Курение в машине<input id="smoking" name="answer" type="radio">Да</label>
+             <label for="smoking"><input id="smoking" name="answer" type="radio">Нет</label>
+         </p>
+         <p>
+             <label for="seats">Предпочтения в рассадке<input id="seats" name="answer" type="radio">Переднее</label>
+             <label for="seats"><input id="seats" name="answer" type="radio">Заднее</label>
+         </p>
+         <p>
+             <label for="pgm">Религиозная атрибутика<input id="pgm" name="answer" type="radio">Да</label>
+             <label for="pgm"><input id="pgm" name="answer" type="radio">Нет</label>
+         </p>
+         <p>
+             <label for="car">Государственный номер</label>
+             <input id="car" type="text" minlength="8" maxlength="13">
+         </p>
+         <p>
+             <label for="color">Цвет</label>
+             <input type="color" id="color" value="info">
+         </p>
+         <p>
+             <input type="submit" value="Отправить">
+         </p>
 <fieldset>
-
-
-запрет на разговор
-музыка музыка в машине?-радио aux usb bluetooth кассеты диск mp3 диск wav
-предпочтение в рассадке
-курение в машине
-религиозная атрибутика
-вид деятельности
-вин?
-государственный номер 
-цвет
-знаком с европротоколом - вывод на статью с инструкцией.
-комментарий
-
-разрешение на обработку персональных данных
-отправку спама
 </body>
 </html>
