--- a/lesson4.html
+++ b/lesson4.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>title</title>
-    <link rel="stylesheet" href="css/mystyle1.css">
+    <link rel="stylesheet" href="css/lesson4.css">
 </head>
 <body>
 <nav>
     <ul>
-        <li class="nav">гл</li>
-        <li class="nav">кат</li>
-        <li class="nav">кан</li>
+        <li class="nav">главная</li>
+        <li class="nav">каталог</li>
+        <li class="nav">контакты</li>
     </ul>
 </nav>
 </body>
