--- a/lesson4.html
+++ b/lesson4.html
@@ -8,9 +8,9 @@
 <body>
 <nav>
     <ul>
-        <li class="nav">главная</li>
-        <li class="nav">каталог</li>
-        <li class="nav">контакты</li>
+        <li class="nav"><a href="1.html">главная</a></li>
+        <li class="nav"><a href="2.html">каталог</a></li>
+        <li class="nav"><a href="3.html">контакты</li>
     </ul>
 </nav>
 </body>
