--- a/2.html
+++ b/2.html
@@ -12,11 +12,11 @@
         <li><a href="regestration.html">Регистрация</a></li>
     </ul>
     <div>
-        <a href="1.html" "#elem1" >1</a>
+        <a href="1.html#elem1" >1</a>
             <br>
-        <a href="1.html" "#elem2" >2</a>
+        <a href="1.html#elem2" >2</a>
             <br>
-        <a href="1.html" "#elem3" >3</a>
+        <a href="1.html#elem3" >3</a>
             <br>
     </div>
 </body>
