--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
     <legend>Регистрация водителя</legend>
         <p>
              <label for="mobilenumber">Номер телефона +7</label>
-             <input id="mobilnumber" type="number" placeholder="9876543210" minlength="10" maxlength="10" required>
+             <input id="mobilenumber" type="number" placeholder="9876543210" minlength="10" maxlength="10" required>
         </p>
         <p>
             <label for="avtoclass">Класс автомобиля</label>
