--- a/lesson4-2.html
+++ b/lesson4-2.html
@@ -10,7 +10,7 @@
     <ul>
         <li class="nav"><a href="1.html">главная</a></li>
         <li class="nav"><a href="2.html">каталог</a></li>
-        <li class="nav"><a href="3.html">контакты</a></li>
+        <li class="nav"><a href="3.html">контакты</li>
     </ul>
 </nav>
 </body>
