--- a/lesson4-2.html
+++ b/lesson4-2.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>title</title>
-    <link rel="stylesheet" href="css/lesson4.css">
+    <link rel="stylesheet" href="css/lesson4-2.css">
 </head>
 <body>
-<nav>
-    <ul>
-        <li class="nav"><a href="1.html">главная</a></li>
-        <li class="nav"><a href="2.html">каталог</a></li>
-        <li class="nav"><a href="3.html">контакты</li>
-    </ul>
-</nav>
+
 </body>
 </html>
