--- a/lesson5.html
+++ b/lesson5.html
@@ -20,9 +20,9 @@
 <div class="row">
     <div class="col-12">
         <ul class="slider">
-            <li class="active"><img src="img/1.jpg"></li>
-            <li><img src="img/2.JPG"></li>
-            <li><img src="img/3.JPG"></li>
+            <li class="active sliderli"><div class="slidercard">добавть возможность отображать текст на слайдере это оно? </div></li>
+            <li class="sliderli"><div class="slidercard">добавть возможность отображать текст на слайдере это оно? </div></li>
+            <li class="sliderli"><div class="slidercard">добавть возможность отображать текст на слайдере это оно? </div></li>
         </ul>
     </div>
 </div>
@@ -50,6 +50,7 @@
         <div class="col-4 row">
             <div class="card">6 товар</div>
         </div>
+    </div>
 </div>
     <!--где клас row лишний?-->
 </body>
