--- a/lesson4-1-2.html
+++ b/lesson4-1-2.html
@@ -8,9 +8,9 @@
 <body>
 <nav>
     <ul>
-        <li class="nav"><a href="1.html">главная</a></li>
-        <li class="nav"><a href="2.html">каталог</a></li>
-        <li class="nav"><a href="3.html">контакты</a></li>
+        <li class="nav"><a href="#">главная</a></li>
+        <li class="nav"><a href="#">каталог</a></li>
+        <li class="nav"><a href="#">контакты</a></li>
     </ul>
 </nav>
 </body>
